syntax = "proto3";

package pb;
option go_package = "api/proto/user/pb";
import "google/protobuf/timestamp.proto";

message User {
  string id = 1;
  string phone = 2;
  string nickname = 3;
  int32 gender = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}
